# axum-sqlx-template

./: .env  .env.example  Cargo.toml
migrations/: 20231101105633_users.up.sql  20231101105818_posts.up.sql  20231101105846_comments.down.sql  20231101105846_comments.up.sql  20231101115532_dummy.up.sql
src/: main.rs
src/http/: hello.rs  mod.rs
tests/: dummy.rs
