[package]
name = "axum-sqlx-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

#Primary crates
axum = { version = "0.6.20", features = ["macros"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }


#important secondary crates
time = "0.3.30"
uuid = { version = "1.5.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.2"
serde = "1.0.190"
serde_with = { version = "3.4.0", features = ["time_0_3"] }
argon2 = "0.5.2"


#Auxilliary crates
anyhow = "1.0.75"
dotenvy = "0.15.7"
once_cell = "1.18.0"
thiserror = "1.0.50"
tracing = "0.1.40"


[dev-dependencies]
serde_json = "1.0.108"
tower = "0.4.13"
